<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:summary="@string/xml_pref_security_summary"
        android:title="@string/xml_pref_security_title">
        <EditTextPreference
            android:icon="@drawable/ic_action_secure"
            android:key="api"
            android:summary="@string/xml_pref_security_api_summary"
            android:title="@string/xml_pref_security_api_title"/>

        <CheckBoxPreference
            android:icon="@drawable/ic_action_secure"
            android:key="pin"
            android:summary="@string/xml_pref_security_pin_summary"
            android:title="@string/xml_pref_security_pin_title"/>

        <EditTextPreference
            android:icon="@drawable/ic_action_accounts"
            android:inputType="numberPassword"
            android:key="pinCode"
            android:summary="@string/xml_pref_security_pin_code_summary"
            android:title="@string/xml_pref_security_pin_code_title"/>

        <CheckBoxPreference
            android:icon="@drawable/ic_action_screen_locked_to_landscape"
            android:key="ssl"
            android:summary="@string/xml_pref_security_ssl_summary"
            android:title="@string/xml_pref_security_ssl_title"/>

    </PreferenceCategory>

</PreferenceScreen>