<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/xml_pref_main_divers_title">
        <SwitchPreference
            android:icon="@drawable/ic_gps_fixed_black_24dp"
            android:key="gps"
            android:summary="@string/pref_gps_provider_summary"
            android:title="@string/pref_gps_provider_title"/>
        <EditTextPreference
            android:icon="@drawable/ic_cached_black_24dp"
            android:inputType="number"
            android:key="sync_frequency"
            android:summary="@string/sync_unit"
            android:title="@string/sync_frequency"/>
        <Preference
            android:icon="@drawable/ic_import_export_black_24dp"
            android:key="import"
            android:summary="@string/xml_pref_divers_settings_import_summary"
            android:title="@string/xml_pref_divers_settings_import_title"/>
        <SwitchPreference
            android:icon="@drawable/ic_brightness_3_black_24dp"
            android:key="doze"
            android:title="@string/pref_ignore_doze_title"/>
        <Preference
            android:icon="@drawable/ic_send_black_24dp"
            android:key="gcm"
            android:summary="@string/xml_pref_divers_gcm_summary"
            android:title="@string/xml_pref_divers_gcm_title"/>

    </PreferenceCategory>

</PreferenceScreen>