<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/xml_pref_main_connection_title">
        <EditTextPreference
            android:icon="@drawable/ic_signal_cellular_4_bar_black_24dp"
            android:key="urlExterne"
            android:summary="@string/xml_pref_connection_url_public_summary"
            android:title="@string/xml_pref_connection_url_public_title"/>
        <EditTextPreference
            android:icon="@drawable/ic_signal_wifi_4_bar_black_24dp"
            android:key="urlInterne"
            android:summary="@string/xml_pref_connection_url_private_summary"
            android:title="@string/xml_pref_connection_url_private_title"/>

        <CheckBoxPreference
            android:icon="@drawable/ic_signal_wifi_4_bar_lock_black_24dp"
            android:key="wifi"
            android:summary="@string/xml_pref_connection_url_private_use_summary"
            android:title="@string/xml_pref_connection_url_private_use_title"/>

        <Preference
            android:icon="@drawable/ic_network_check_black_24dp"
            android:key="wifiHome"
            android:summary="@string/xml_pref_connection_wifi_home_summary"
            android:title="@string/xml_pref_connection_wifi_home_title"/>
    </PreferenceCategory>

</PreferenceScreen>