<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="@string/xml_pref_geo_incoming_summary"
        android:title="@string/xml_pref_geo_incoming_title">

        <CheckBoxPreference
            android:icon="@drawable/ic_signal_wifi_4_bar_black_24dp"
            android:key="geo_enter_wifi"
            android:title="@string/xml_pref_geo_incoming_wifi_title"/>

        <CheckBoxPreference
            android:icon="@drawable/ic_lock_black_24dp"
            android:key="geo_enter_alarm"
            android:title="@string/xml_pref_geo_incoming_alarm_title"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/geo_ring_profil_entries"
            android:entryValues="@array/geo_ring_profil_values"
            android:icon="@drawable/ic_call_black_24dp"
            android:key="geo_enter_ring"
            android:title="@string/xml_pref_geo_incoming_ring_profil_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/xml_pref_geo_outgoing_summary"
        android:title="@string/xml_pref_geo_outgoing_title">

        <CheckBoxPreference
            android:icon="@drawable/ic_signal_wifi_4_bar_black_24dp"
            android:key="geo_exit_wifi"
            android:title="@string/xml_pref_geo_outgoing_wifi_title"/>

        <CheckBoxPreference
            android:icon="@drawable/ic_lock_black_24dp"
            android:key="geo_exit_alarm"
            android:title="@string/xml_pref_geo_outgoing_alarm_title"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/geo_ring_profil_entries"
            android:entryValues="@array/geo_ring_profil_values"
            android:icon="@drawable/ic_call_black_24dp"
            android:key="geo_exit_ring"
            android:title="@string/xml_pref_geo_outgoing_ring_profil_title"/>
    </PreferenceCategory>
</PreferenceScreen>