<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemSearch"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/itemCuisineAdd"
        android:icon="@drawable/ic_action_new"
        android:title="@string/menu_fragment_cuisine_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/itemCuisineAll"
        android:checkable="true"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/menu_fragment_cuisine_show_all"
        app:showAsAction="ifRoom"/>

</menu>