<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtDevicesAddName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_fragment_devices_add_device_label"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/txtDevicesAddIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_fragment_devices_add_device_ip_address"
                android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/txtDevicesAddMac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_fragment_devices_add_device_mac_address"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/spDevicesAddType"
            android:text="@string/layout_fragment_devices_add_device_type"/>

        <Spinner
            android:id="@+id/spDevicesAddType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/spDevicesAddConnection"
            android:text="@string/layout_fragment_devices_add_device_connection"/>

        <Spinner
            android:id="@+id/spDevicesAddConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>