<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="30dp">

    <CheckBox
        android:id="@+id/cbGPSon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/layout_fragment_gps_geo_turn_on"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75">

            <EditText
                android:id="@+id/txtGPScoord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_fragment_gps_define_home"/>"

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/btnGPSPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:src="@drawable/ic_action_location_found"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75">

            <EditText
                android:id="@+id/txtGPSradius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_fragment_gps_define_circle"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/btnGPSRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:src="@drawable/ic_action_accept"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnGPSClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/layout_fragment_gps_clear_data"/>

</LinearLayout>
