<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/txtPharmacieNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_fragment_pharmacie_add_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/txtPharmacieQte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_fragment_pharmacie_add_quantity"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txtPharmacieDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/layout_fragment_pharmacie_add_date_peremption"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btnPharmacieAddDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="calendar"
                android:src="@drawable/ic_action_go_to_today"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>